--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,270 @@ data/categories/dataset_5secondWindow_Car.csv
 data/categories/dataset_5secondWindow_Still.csv
 data/categories/dataset_5secondWindow_Train.csv
 data/categories/dataset_5secondWindow_Walking.csv
+data/raw_data/U1/sensorfile_U1_Bus_1480485018989.csv
+data/raw_data/U1/sensorfile_U1_Bus_1480495444864.csv
+data/raw_data/U1/sensorfile_U1_Bus_1480525822516.csv
+data/raw_data/U1/sensorfile_U1_Bus_1480526541873.csv
+data/raw_data/U1/sensorfile_U1_Bus_1480536079178.csv
+data/raw_data/U1/sensorfile_U1_Bus_1481991589362.csv
+data/raw_data/U1/sensorfile_U1_Car_1480357774181.csv
+data/raw_data/U1/sensorfile_U1_Car_1480357887546.csv
+data/raw_data/U1/sensorfile_U1_Car_1480450391093.csv
+data/raw_data/U1/sensorfile_U1_Car_1480847595197.csv
+data/raw_data/U1/sensorfile_U1_Car_1480848538099.csv
+data/raw_data/U1/sensorfile_U1_Car_1480876805131.csv
+data/raw_data/U1/sensorfile_U1_Car_1481467198310.csv
+data/raw_data/U1/sensorfile_U1_Car_1481477514890.csv
+data/raw_data/U1/sensorfile_U1_Still_1480332032170.csv
+data/raw_data/U1/sensorfile_U1_Still_1481122978371.csv
+data/raw_data/U1/sensorfile_U1_Still_1481226847221.csv
+data/raw_data/U1/sensorfile_U1_Still_1481409604878.csv
+data/raw_data/U1/sensorfile_U1_Still_1481751516764.csv
+data/raw_data/U1/sensorfile_U1_Train_1480487624821.csv
+data/raw_data/U1/sensorfile_U1_Train_1480489468480.csv
+data/raw_data/U1/sensorfile_U1_Train_1480489611057.csv
+data/raw_data/U1/sensorfile_U1_Train_1480490290470.csv
+data/raw_data/U1/sensorfile_U1_Train_1480491119955.csv
+data/raw_data/U1/sensorfile_U1_Train_1480530298390.csv
+data/raw_data/U1/sensorfile_U1_Train_1480534304302.csv
+data/raw_data/U1/sensorfile_U1_Train_1481110549356.csv
+data/raw_data/U1/sensorfile_U1_Train_1481124248391.csv
+data/raw_data/U1/sensorfile_U1_Train_1481126627480.csv
+data/raw_data/U1/sensorfile_U1_Train_1481399878883.csv
+data/raw_data/U1/sensorfile_U1_Walking_1480508645016.csv
+data/raw_data/U1/sensorfile_U1_Walking_1480512323378.csv
+data/raw_data/U1/sensorfile_U1_Walking_1481128485906.csv
+data/raw_data/U1/sensorfile_U1_Walking_1481131747911.csv
+data/raw_data/U1/sensorfile_U1_Walking_1481132635437.csv
+data/raw_data/U1/sensorfile_U1_Walking_1481223778668.csv
+data/raw_data/U1/sensorfile_U1_Walking_1481239819321.csv
+data/raw_data/U1/sensorfile_U1_Walking_1481902910218.csv
+data/raw_data/U1/sensorfile_U1_Walking_1481913661353.csv
+data/raw_data/U1/sensorfile_U1_Walking_1482005121341.csv
+data/raw_data/U1/sensorfile_U1_Walking_1482028010858.csv
+data/raw_data/U1/sensorfile_U1_Walking_1482085178037.csv
+data/raw_data/U10/sensorfile_U10_Car_1484134514872.csv
+data/raw_data/U10/sensorfile_U10_Car_1485092234910.csv
+data/raw_data/U10/sensorfile_U10_Car_1485092389164.csv
+data/raw_data/U10/sensorfile_U10_Car_1485092389235.csv
+data/raw_data/U10/sensorfile_U10_Car_1485092610362.csv
+data/raw_data/U10/sensorfile_U10_Car_1485092760585.csv
+data/raw_data/U10/sensorfile_U10_Car_1485092954647.csv
+data/raw_data/U10/sensorfile_U10_Car_1485093212618.csv
+data/raw_data/U10/sensorfile_U10_Car_1485093419815.csv
+data/raw_data/U10/sensorfile_U10_Still_1484428722594.csv
+data/raw_data/U10/sensorfile_U10_Still_1484429434000.csv
+data/raw_data/U10/sensorfile_U10_Still_1484659419340.csv
+data/raw_data/U10/sensorfile_U10_Still_1484659970203.csv
+data/raw_data/U10/sensorfile_U10_Still_1484680971878.csv
+data/raw_data/U10/sensorfile_U10_Still_1484693356845.csv
+data/raw_data/U10/sensorfile_U10_Still_1484694991000.csv
+data/raw_data/U10/sensorfile_U10_Still_1485096550525.csv
+data/raw_data/U10/sensorfile_U10_Walking_1477077049387.csv
+data/raw_data/U10/sensorfile_U10_Walking_1484390048390.csv
+data/raw_data/U10/sensorfile_U10_Walking_1484390655869.csv
+data/raw_data/U10/sensorfile_U10_Walking_1484390802366.csv
+data/raw_data/U10/sensorfile_U10_Walking_1484393350049.csv
+data/raw_data/U10/sensorfile_U10_Walking_1485093716801.csv
+data/raw_data/U10/sensorfile_U10_Walking_1485093844769.csv
+data/raw_data/U10/sensorfile_U10_Walking_1485093988338.csv
+data/raw_data/U10/sensorfile_U10_Walking_1485094081562.csv
+data/raw_data/U11/sensorfile_U11_Car_1468136032350.csv
+data/raw_data/U11/sensorfile_U11_Car_1468164382460.csv
+data/raw_data/U11/sensorfile_U11_Car_1469272124676.csv
+data/raw_data/U11/sensorfile_U11_Car_1469797117873.csv
+data/raw_data/U11/sensorfile_U11_Car_1469801393547.csv
+data/raw_data/U11/sensorfile_U11_Car_1469969900018.csv
+data/raw_data/U11/sensorfile_U11_Car_1469971305132.csv
+data/raw_data/U11/sensorfile_U11_Car_1469972420332.csv
+data/raw_data/U12/sensorfile_U12_Bus_1467877458278.csv
+data/raw_data/U12/sensorfile_U12_Bus_1467965458071.csv
+data/raw_data/U12/sensorfile_U12_Bus_1468483170759.csv
+data/raw_data/U12/sensorfile_U12_Bus_1468567430541.csv
+data/raw_data/U12/sensorfile_U12_Bus_1469000665530.csv
+data/raw_data/U12/sensorfile_U12_Bus_1469095801316.csv
+data/raw_data/U12/sensorfile_U12_Bus_1469431117463.csv
+data/raw_data/U12/sensorfile_U12_Bus_1469693002554.csv
+data/raw_data/U12/sensorfile_U12_Bus_1469693170815.csv
+data/raw_data/U12/sensorfile_U12_Car_1469996642012.csv
+data/raw_data/U12/sensorfile_U12_Car_1470124305088.csv
+data/raw_data/U12/sensorfile_U12_Car_1470124871182.csv
+data/raw_data/U12/sensorfile_U12_Car_1470294517129.csv
+data/raw_data/U12/sensorfile_U12_Car_1470295601095.csv
+data/raw_data/U12/sensorfile_U12_Car_1481824439967.csv
+data/raw_data/U12/sensorfile_U12_Still_1467959587008.csv
+data/raw_data/U12/sensorfile_U12_Still_1467966144317.csv
+data/raw_data/U12/sensorfile_U12_Still_1469265887165.csv
+data/raw_data/U12/sensorfile_U12_Still_1469266921088.csv
+data/raw_data/U12/sensorfile_U12_Still_1469267354671.csv
+data/raw_data/U12/sensorfile_U12_Still_1469267675493.csv
+data/raw_data/U12/sensorfile_U12_Still_1469268805839.csv
+data/raw_data/U12/sensorfile_U12_Still_1469269143071.csv
+data/raw_data/U12/sensorfile_U12_Still_1469270753253.csv
+data/raw_data/U12/sensorfile_U12_Still_1469445906226.csv
+data/raw_data/U12/sensorfile_U12_Still_1469627354107.csv
+data/raw_data/U12/sensorfile_U12_Still_1469773082476.csv
+data/raw_data/U12/sensorfile_U12_Still_1469774000632.csv
+data/raw_data/U12/sensorfile_U12_Still_1469774322629.csv
+data/raw_data/U12/sensorfile_U12_Still_1469775306312.csv
+data/raw_data/U12/sensorfile_U12_Still_1469787710915.csv
+data/raw_data/U12/sensorfile_U12_Still_1482258270663.csv
+data/raw_data/U12/sensorfile_U12_Train_1467874365472.csv
+data/raw_data/U12/sensorfile_U12_Train_1467963345784.csv
+data/raw_data/U12/sensorfile_U12_Train_1467963376564.csv
+data/raw_data/U12/sensorfile_U12_Train_1468304754815.csv
+data/raw_data/U12/sensorfile_U12_Train_1468319546128.csv
+data/raw_data/U12/sensorfile_U12_Train_1468481773622.csv
+data/raw_data/U12/sensorfile_U12_Train_1468481920259.csv
+data/raw_data/U12/sensorfile_U12_Train_1468564961568.csv
+data/raw_data/U12/sensorfile_U12_Train_1469692063836.csv
+data/raw_data/U12/sensorfile_U12_Train_1469692086480.csv
+data/raw_data/U12/sensorfile_U12_Train_1469692323725.csv
+data/raw_data/U12/sensorfile_U12_Train_1482219115707.csv
+data/raw_data/U12/sensorfile_U12_Train_1482219407778.csv
+data/raw_data/U12/sensorfile_U12_Train_1482219587657.csv
+data/raw_data/U12/sensorfile_U12_Train_1482219802331.csv
+data/raw_data/U12/sensorfile_U12_Train_1482219990402.csv
+data/raw_data/U12/sensorfile_U12_Train_1482220332165.csv
+data/raw_data/U12/sensorfile_U12_Train_1482220448865.csv
+data/raw_data/U12/sensorfile_U12_Train_1482220554484.csv
+data/raw_data/U12/sensorfile_U12_Train_1482220899558.csv
+data/raw_data/U12/sensorfile_U12_Train_1482255675041.csv
+data/raw_data/U12/sensorfile_U12_Train_1482256448801.csv
+data/raw_data/U12/sensorfile_U12_Walking_1467873082166.csv
+data/raw_data/U12/sensorfile_U12_Walking_1467908906985.csv
+data/raw_data/U12/sensorfile_U12_Walking_1467913316731.csv
+data/raw_data/U12/sensorfile_U12_Walking_1467960700372.csv
+data/raw_data/U12/sensorfile_U12_Walking_1467964441207.csv
+data/raw_data/U12/sensorfile_U12_Walking_1468303403139.csv
+data/raw_data/U12/sensorfile_U12_Walking_1468307037179.csv
+data/raw_data/U12/sensorfile_U12_Walking_1468389714012.csv
+data/raw_data/U12/sensorfile_U12_Walking_1468598879768.csv
+data/raw_data/U12/sensorfile_U12_Walking_1468822663187.csv
+data/raw_data/U12/sensorfile_U12_Walking_1468822692665.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469427616019.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469552569683.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469552591838.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469552594052.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469552905984.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469553242374.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469553243923.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469627044685.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469688563587.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469723361601.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469724027003.csv
+data/raw_data/U12/sensorfile_U12_Walking_1469790257164.csv
+data/raw_data/U12/sensorfile_U12_Walking_1482221446024.csv
+data/raw_data/U12/sensorfile_U12_Walking_1482222341647.csv
+data/raw_data/U12/sensorfile_U12_Walking_1482250899647.csv
+data/raw_data/U12/sensorfile_U12_Walking_1482251152779.csv
+data/raw_data/U12/sensorfile_U12_Walking_1482251197842.csv
+data/raw_data/U12/sensorfile_U12_Walking_1482251298499.csv
+data/raw_data/U12/sensorfile_U12_Walking_1482251560598.csv
+data/raw_data/U12/sensorfile_U12_Walking_1482256647282.csv
+data/raw_data/U13/sensorfile_U13_Car_1474820020900.csv
+data/raw_data/U13/sensorfile_U13_Car_1481824701328.csv
+data/raw_data/U13/sensorfile_U13_Car_1481825070949.csv
+data/raw_data/U13/sensorfile_U13_Car_1481825448326.csv
+data/raw_data/U14/sensorfile_U14_Car_1494720458830.csv
+data/raw_data/U14/sensorfile_U14_Still_1494702992016.csv
+data/raw_data/U14/sensorfile_U14_Walking_1494702597626.csv
+data/raw_data/U15/sensorfile_U15_Bus_1494682085763.csv
+data/raw_data/U15/sensorfile_U15_Car_1494699733432.csv
+data/raw_data/U15/sensorfile_U15_Car_1494720445399.csv
+data/raw_data/U15/sensorfile_U15_Car_1494721598840.csv
+data/raw_data/U15/sensorfile_U15_Still_1494446147019.csv
+data/raw_data/U15/sensorfile_U15_Still_1494543607046.csv
+data/raw_data/U15/sensorfile_U15_Still_1494703053675.csv
+data/raw_data/U15/sensorfile_U15_Still_1494939405042.csv
+data/raw_data/U15/sensorfile_U15_Train_1494687568130.csv
+data/raw_data/U15/sensorfile_U15_Train_1494691492085.csv
+data/raw_data/U15/sensorfile_U15_Train_1494693221377.csv
+data/raw_data/U15/sensorfile_U15_Train_1495789181488.csv
+data/raw_data/U15/sensorfile_U15_Walking_1494444124129.csv
+data/raw_data/U15/sensorfile_U15_Walking_1494453137682.csv
+data/raw_data/U16/sensorfile_U16_Car_1495787810252.csv
+data/raw_data/U16/sensorfile_U16_Still_1494767997350.csv
+data/raw_data/U16/sensorfile_U16_Train_1494824371104.csv
+data/raw_data/U16/sensorfile_U16_Train_1495198005615.csv
+data/raw_data/U2/sensorfile_U2_Car_1482075350633.csv
+data/raw_data/U2/sensorfile_U2_Car_1482076763383.csv
+data/raw_data/U2/sensorfile_U2_Still_1481721631948.csv
+data/raw_data/U2/sensorfile_U2_Still_1481741197475.csv
+data/raw_data/U2/sensorfile_U2_Still_1482403703380.csv
+data/raw_data/U2/sensorfile_U2_Walking_1481719972876.csv
+data/raw_data/U2/sensorfile_U2_Walking_1481734817202.csv
+data/raw_data/U2/sensorfile_U2_Walking_1481741581948.csv
+data/raw_data/U2/sensorfile_U2_Walking_1481792017615.csv
+data/raw_data/U2/sensorfile_U2_Walking_1481801630904.csv
+data/raw_data/U2/sensorfile_U2_Walking_1481805362089.csv
+data/raw_data/U2/sensorfile_U2_Walking_1481897172301.csv
+data/raw_data/U2/sensorfile_U2_Walking_1482052907594.csv
+data/raw_data/U2/sensorfile_U2_Walking_1482054015473.csv
+data/raw_data/U2/sensorfile_U2_Walking_1482146426666.csv
+data/raw_data/U2/sensorfile_U2_Walking_1482155710676.csv
+data/raw_data/U2/sensorfile_U2_Walking_1482404668870.csv
+data/raw_data/U3/sensorfile_U3_Bus_1476468846059.csv
+data/raw_data/U3/sensorfile_U3_Bus_1476522938446.csv
+data/raw_data/U3/sensorfile_U3_Bus_1476534987916.csv
+data/raw_data/U3/sensorfile_U3_Train_1481206556125.csv
+data/raw_data/U3/sensorfile_U3_Train_1481206924460.csv
+data/raw_data/U3/sensorfile_U3_Train_1481207214123.csv
+data/raw_data/U3/sensorfile_U3_Walking_1476096498461.csv
+data/raw_data/U3/sensorfile_U3_Walking_1476121780062.csv
+data/raw_data/U3/sensorfile_U3_Walking_1476469082479.csv
+data/raw_data/U3/sensorfile_U3_Walking_1476535417346.csv
+data/raw_data/U4/sensorfile_U4_Car_1479637454926.csv
+data/raw_data/U4/sensorfile_U4_Car_1482579574027.csv
+data/raw_data/U4/sensorfile_U4_Still_1480624350800.csv
+data/raw_data/U4/sensorfile_U4_Still_1480668771280.csv
+data/raw_data/U4/sensorfile_U4_Still_1483377130615.csv
+data/raw_data/U4/sensorfile_U4_Still_1483379910088.csv
+data/raw_data/U4/sensorfile_U4_Still_1483382442716.csv
+data/raw_data/U4/sensorfile_U4_Still_1483386035883.csv
+data/raw_data/U4/sensorfile_U4_Walking_1481124283415.csv
+data/raw_data/U4/sensorfile_U4_Walking_1481137126492.csv
+data/raw_data/U4/sensorfile_U4_Walking_1483378432974.csv
+data/raw_data/U4/sensorfile_U4_Walking_1483379463951.csv
+data/raw_data/U4/sensorfile_U4_Walking_1483381677140.csv
+data/raw_data/U4/sensorfile_U4_Walking_1483382504428.csv
+data/raw_data/U4/sensorfile_U4_Walking_1483383409779.csv
+data/raw_data/U5/sensorfile_U5_Still_1480758443324.csv
+data/raw_data/U5/sensorfile_U5_Walking_1480775590808.csv
+data/raw_data/U6/sensorfile_U6_Bus_1483208717101.csv
+data/raw_data/U6/sensorfile_U6_Bus_1483209051715.csv
+data/raw_data/U6/sensorfile_U6_Car_1482685802032.csv
+data/raw_data/U6/sensorfile_U6_Car_1482769657696.csv
+data/raw_data/U6/sensorfile_U6_Car_1483001504382.csv
+data/raw_data/U6/sensorfile_U6_Car_1483001579260.csv
+data/raw_data/U6/sensorfile_U6_Still_1482329576906.csv
+data/raw_data/U6/sensorfile_U6_Still_1482494171330.csv
+data/raw_data/U6/sensorfile_U6_Train_1483009778999.csv
+data/raw_data/U6/sensorfile_U6_Train_1483019290680.csv
+data/raw_data/U6/sensorfile_U6_Train_1484584797912.csv
+data/raw_data/U6/sensorfile_U6_Train_1484585269842.csv
+data/raw_data/U6/sensorfile_U6_Walking_1482686675415.csv
+data/raw_data/U6/sensorfile_U6_Walking_1482687156727.csv
+data/raw_data/U7/sensorfile_U7_Bus_1480756072372.csv
+data/raw_data/U7/sensorfile_U7_Bus_1480756078757.csv
+data/raw_data/U7/sensorfile_U7_Bus_1480756087955.csv
+data/raw_data/U7/sensorfile_U7_Bus_1480756134428.csv
+data/raw_data/U7/sensorfile_U7_Train_1481183021110.csv
+data/raw_data/U7/sensorfile_U7_Train_1481188255327.csv
+data/raw_data/U7/sensorfile_U7_Train_1481188727664.csv
+data/raw_data/U7/sensorfile_U7_Train_1481189589343.csv
+data/raw_data/U7/sensorfile_U7_Train_1481189661253.csv
+data/raw_data/U7/sensorfile_U7_Train_1481189700986.csv
+data/raw_data/U7/sensorfile_U7_Train_1481191128925.csv
+data/raw_data/U7/sensorfile_U7_Train_1481191525702.csv
+data/raw_data/U8/sensorfile_U8_Car_1480577874908.csv
+data/raw_data/U8/sensorfile_U8_Car_1481529734293.csv
+data/raw_data/U8/sensorfile_U8_Still_1480525014020.csv
+data/raw_data/U9/sensorfile_U9_Train_1480698600960.csv
+data/raw_data/U9/sensorfile_U9_Walking_1480699817447.csv
+data/raw_data/U9/sensorfile_U9_Walking_1480700837189.csv
+data/archive/dataset_5secondWindow%5B1%5D.csv
+data/archive/dataset_5secondWindow%5B2%5D.csv
+data/archive/dataset_5secondWindow%5B3%5D.csv
+data/categories/.DS_Store
+.DS_Store
