--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ image==1.5.33
 matplotlib==3.4.1
 matplotlib-inline==0.1.2
 missingno==0.4.2
+more-itertools==8.5.0
 numpy==1.19.5
 oauthlib==3.1.0
 pandas==1.2.4
